--- a/shopping-cart/shopping-cart-api/pom.xml
+++ b/shopping-cart/shopping-cart-api/pom.xml
@@ -14,4 +14,15 @@
 
     <artifactId>shopping-cart-api</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.axonframework</groupId>
+            <artifactId>axon-modelling</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-stdlib-jdk8</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
